update test command image name

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
 #build and test
 install:
   - docker build --pull -t $IMAGE:$IMAGE_VERSION .
-  - export CONTAINER_COMMAND="docker run $IMAGE $TEST_COMMAND"
+  - export CONTAINER_COMMAND="docker run $IMAGE:$IMAGE_VERSION $TEST_COMMAND"
   - echo CONTAINER_COMMAND=$CONTAINER_COMMAND
   - export CONTAINER_OUTPUT=$(eval $CONTAINER_COMMAND)
   - echo CONTAINER_OUTPUT=$CONTAINER_OUTPUT
