--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,8 @@ script:
 ## Get the project version
 before_deploy:
   - export CURRENT_VERSION=$(git describe --tag --always --long | sed -e 's/\(.*\)-\(.*\)-.*/\1.\2/')
+  - declare -a CURRENT_VERSION_ARRAY="(${CURRENT_VERSION/\./ })"
+  - echo SEMVER:${CURRENT_VERSION_ARRAY[0]}.${CURRENT_VERSION_ARRAY[1]}.${CURRENT_VERSION_ARRAY[-1]}
   - echo CURRENT_VERSION=$CURRENT_VERSION
   - export TRAVIS_TAG=$CURRENT_VERSION
   - if [[ $TRAVIS_BRANCH == "master" ]]; then git tag $TRAVIS_TAG; fi
