add semver version calc

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,10 +38,12 @@ script:
 ## Get the project version
 before_deploy:
   - export CURRENT_VERSION=$(git describe --tag --always --long | sed -e 's/\(.*\)-\(.*\)-.*/\1.\2/')
-  - declare -x -a CURRENT_VERSION_ARRAY="(${CURRENT_VERSION/\./ })"
-  - echo MAJOR:${CURRENT_VERSION_ARRAY[0]}
-  - echo MINOR:${CURRENT_VERSION_ARRAY[1]}
-  - echo LAST:${CURRENT_VERSION_ARRAY[-1]}
+  - declare -a CURRENT_VERSION_ARRAY="(${CURRENT_VERSION//./ })"; export SEMVER_MAJOR=${CURRENT_VERSION_ARRAY[0]}; export SEMVER_MINOR=${CURRENT_VERSION_ARRAY[1]}; export SEMVER_BUILD=${CURRENT_VERSION_ARRAY[-1]}
+  - echo SEMVER_MAJOR:${SEMVER_MAJOR}
+  - echo SEMVER_MINOR:${SEMVER_MINOR}
+  - echo SEMVER_BUILD:${SEMVER_BUILD}
+  - export SEMVER=${SEMVER_MAJOR}.${SEMVER_MINOR}.${SEMVER_BUILD}
+  - echo SEMVER=$SEMVER
   - echo CURRENT_VERSION=$CURRENT_VERSION
   - export TRAVIS_TAG=$CURRENT_VERSION
   - if [[ $TRAVIS_BRANCH == "master" ]]; then git tag $TRAVIS_TAG; fi
