--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,7 @@ before_deploy:
   - echo SEMVER_BUILD:${SEMVER_BUILD}
   - export SEMVER=${SEMVER_MAJOR}.${SEMVER_MINOR}.${SEMVER_BUILD}
   - echo SEMVER=$SEMVER
+  - if [[ ${SEMVER_MAJOR} == "" ]]; then travis_terminate 1; fi
   - echo CURRENT_VERSION=$CURRENT_VERSION
   - export TRAVIS_TAG=$CURRENT_VERSION
   - if [[ $TRAVIS_BRANCH == "master" ]]; then git tag $TRAVIS_TAG; fi
